--- a/Perrosxd/perros.html
+++ b/Perrosxd/perros.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rick & Morty</title>
+    <title>Dogi dogs 🐶😎</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-
-  <center><h1>Personajes de la serie "Rick & Morty</h1></center>
-
     <body class="bg-gray-100">
         <div class="container mx-auto p-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4" id="cards">
               
             </div>
         </div>
-        <script src="./rick.js"></script>
+    
+        <script src="./perros.js"></script>
     </body>
 </body>
 </html>
